# astroutils

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
astroutils/: config.ini  io.py  logger.py  query.py  source.py  surveys.json  utils.py
astroutils/cli/: build_fields.py  check_position.py  fit_flux.py  lightcurve.py
tests/: test_astroutils.py  test_build_fields_script.py  test_io.py  test_logger.py  test_source.py  test_utils.py
tests/data/: RACS_0000-12A.EPOCH00.I.selavy.components.txt  RACS_1200-74A.EPOCH00.I.selavy.components.txt  VAST_0012+00A.EPOCH12.I.selavy.components.xml  VAST_1237+00A.EPOCH02.I.selavy.components.xml  VAST_1237+00A.EPOCH08.I.selavy.components.xml  empty_selavyfile.txt  mwats_test.parq  nimage.v.VAST_0021+00.SB29580.cont.taylor.0.restored.conv.components.xml  test_image_rms.fits
tests/data/multi_field_with_fieldname_no_sbid/STOKESV_IMAGES/: VAST_0012-00A.EPOCH03x.V.fits
tests/data/single_field_with_sbid_no_fieldname/STOKESV_IMAGES/: image.v.SB9602.cont.taylor.0.restored.fits
tests/data/vlass/VLASS1.1/T01t01/VLASS1.1.ql.T01t01.J000228-363000.10.2048.v1/: VLASS1.1.ql.T01t01.J000228-363000.10.2048.v1.I.iter1.image.pbcor.tt0.subim.fits
