[tool.poetry]
name = "astroutils"
version = "0.1.0"
description = ""
authors = ["Joshua <jpri6587@sydney.edu.au>"]

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^5.0.1"
pandas = "^1.4.1"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
colorlog = "^6.6.0"
pyarrow = "^7.0.0"
click = "^8.0.4"
forced-phot = {git = "https://github.com/askap-vast/forced_phot.git"}
dask = {extras = ["distributed"], version = "^2023.5.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^6.3.2"
mypy = "^0.941"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
astroutils-build-fields = "astroutils.cli.build_fields:main"
astroutils-fit-flux = "astroutils.cli.fit_flux:main"
astroutils-lightcurve = "astroutils.cli.lightcurve:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::astropy.wcs.FITSFixedWarning",
]

[tool.pyright]
reportMissingTypeStubs = false
reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false

[tool.mypy]

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "astropy.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
