[tool.poetry]
name = "astroutils"
version = "0.1.0"
description = ""
authors = ["Joshua <jpri6587@sydney.edu.au>"]

[tool.poetry.dependencies]
python = "^3.11"
astropy = "^6.0.0"
pandas = "^2.1.4"
numpy = "^1.22.2"
matplotlib = "^3.8.2"
colorlog = "^6.8.2"
click = "^8.0.4"
forced-phot = {git = "https://github.com/askap-vast/forced_phot.git"}
dask = {extras = ["distributed"], version = "^2023.5.1"}
pyarrow = "^14.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
astroutils-build-fields = "astroutils.cli.build_fields:main"
astroutils-fit-flux = "astroutils.cli.fit_flux:main"
astroutils-lightcurve = "astroutils.cli.lightcurve:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
isort = "^5.13.2"
black = "^24.1.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.1"
coverage = "^7.4.1"
mypy = "^1.8.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::astropy.wcs.FITSFixedWarning",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 88
profile = "black"
include_trailing_comma = true

[tool.pyright]
reportMissingTypeStubs = false
reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false

[tool.mypy]

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "astropy.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
